# MPBC-VYFA-SF

./: README.md  amplifier.py  attributes.py  pyproject.toml  shg_temperature_scan.csv  shg_temperature_scan_2023_04_05T15_20_52.csv  shg_temperature_scan_2023_04_05T15_24_40.csv
Examples/: scan_sgh_temperature.py  shg_temperature_scan.csv
examples/: 2024_06_01T14_51_38_shg_scan.csv  2024_06_01T14_52_13_shg_scan.csv  2024_06_01T14_54_44_shg_scan.csv  2024_06_01T14_56_11_shg_scan.csv  2024_06_01T14_58_26_shg_scan.csv  MPBCAmpSHGApp.tcss  scan_shg_temperature_textual.py
mpbc_vyf_sf/: __init__.py  amplifier.py  attributes.py  enums.py  shg_optimization_gui.py
mpbc_vyfa_sf/: SHG_temperature_scan.csv  __init__.py  amplifier.py  attributes.py  enums.py  exceptions.py
